# ki-rechnungen-app

./: .gitignore  README.md  invoice_config.json  office_rules.json  office_rules.schema.json  profile_config.example.json  profile_config.schema.json  pyproject.toml
.cursor/rules/: ki-rechnungen-workflow.mdc
docs/: CURSOR_WORKFLOW_RULES.md  MASTERPLAN_PDF_DOCUMENT_TOOL.md  macos-build.md
docs/roadmap/: PDF_TOOL_CURSOR_AGENT_WORKFLOW.md
invoice_tool/: __init__.py  __main__.py  classification.py  config.py  extraction.py  filename_schema.py  gui.py  logging_utils.py  matching.py  models.py  normalization.py  processing.py  profile_compiler.py  routing.py  run.py  runtime.py  state.py  street_variants.py  trace.py
scripts/: build_macos_app.sh  check_profile_run.py  dev_assistant.py  preview_profile_runtime_rules.py  run_smoke_test.py
tests/: test_check_profile_run.py  test_dev_assistant.py  test_invoice_tool.py  test_office_rules_schema.py  test_profile_compiler.py  test_profile_config_schema.py  test_run.py  test_runtime_rules.py  test_smoke_test_script.py  test_street_variants.py
tmp_verification_round2/: config.json  rules.json
tmp_verification_round2/output/_duplicate_reports/: adobe.txt
